Dtr 247: Ap1a, Ap1b and Ap1c screens (#104)
* DTR-193: setting up basic page intitially

* DTR-193: Adding test cases and routes to Journey recovery for now

* DTR-193: Tidying up and some refractoring the code

* DTR-246: Initial Page developmment

* DTR-193: basic changes and tidy up

* DTR-193: Changing the hint text

* DTR-246: adding test cases, page title and url.

* DTR-247: Scaffolding of new pages

* DTR-193: URL changes

* DTR-247: Page ready and navigations

* DTR-247: Test cases and minor changes

* DTR-247 update error message

* DTR-323: scaffolds

* merge from main, update endpoint

* DTR-323: page design updated

* DTR-323: routing and backlinks added

* DTR-323: dummy data added for the service

* DTR-323: tidy up

* fix the navigations, update tests

* DTR-323: refactoring for f16 f17

* DTR-323: refactoring for f15 f16 logic integrated

* DTR-323 updated

* DTR-323: mock data added for cache

* update end to end navigation with F17 check

* DTR-323: cache issue fixed

* DTR-323: cache issue fixed

* DTR-323: unit tests updated

* DTR-323: tidy up

* DTR-247 merge conflicts fixed

* DTR-247: routing corrected

* DTR-323: cancel button issue fixed

* code refactor

* DTR-323: unit tests updated

* refactor code, added testes

* DTR-247: merge conflicts resolved

* DTR-247: budget type action issue fixed

* DTR-247: logs added for f15 f16

* DTR-247: unit tests added for payment plan details controller

* DTR-247: payment plan response updated

* DTR-247: tidy up

* DTR-247: cache values corrected

* add and fix tests

* fix view error message

* fix tests

* DTR-247: re-move repo test package

---------

Co-authored-by: javed Iqbal <131012491+javed-iqbal1@users.noreply.github.com>
Co-authored-by: yohan-oc <129070827+yohan-oc@users.noreply.github.com>
Co-authored-by: shridhar-chippa <189346280+shridhar-chippa@users.noreply.github.com>

--- a/app/views/DirectDebitSummaryView.scala.html
+++ b/app/views/DirectDebitSummaryView.scala.html
@@ -42,28 +42,16 @@
     @govukSummaryList(SummaryList(
         rows = Seq(
             SummaryListRow(
-                key = Key(
-                    content = messages("directDebitPaymentSummary.directDebit.reference")
-                ),
-                value = Value(
-                    content = HtmlContent(directDebitReference)
-                )
+                key = Key(content = messages("directDebitPaymentSummary.directDebit.reference")),
+                value = Value(content = HtmlContent(directDebitReference))
             ),
             SummaryListRow(
-                key = Key(
-                    content = messages("directDebitPaymentSummary.directDebit.accountNumber")
-                ),
-                value = Value(
-                    content = HtmlContent(maskAccountNumber(directDebitDetails.bankAccountNumber))
-                )
+                key = Key(content = messages("directDebitPaymentSummary.directDebit.accountNumber")),
+                value = Value(content = HtmlContent(maskAccountNumber(directDebitDetails.bankAccountNumber)))
             ),
             SummaryListRow(
-                key = Key(
-                    content = messages("directDebitPaymentSummary.directDebit.sortCode")
-                ),
-                value = Value(
-                    content = HtmlContent(maskSortCode(directDebitDetails.bankSortCode))
-                )
+                key = Key(content = messages("directDebitPaymentSummary.directDebit.sortCode")),
+                value = Value(content = HtmlContent(maskSortCode(directDebitDetails.bankSortCode)))
             )
         )
     ))
@@ -88,36 +76,20 @@
             )),
             rows = Seq(
                 SummaryListRow(
-                    key = Key(
-                        content = messages("directDebitPaymentSummary.activePayment.summary.planType")
-                    ),
-                    value = Value(
-                        content = HtmlContent(pp.planType)
-                    )
+                    key = Key(content = messages("directDebitPaymentSummary.activePayment.summary.planType")),
+                    value = Value(content = HtmlContent(pp.planType))
                 ),
                 SummaryListRow(
-                    key = Key(
-                        content = messages("directDebitPaymentSummary.activePayment.summary.paymentFor")
-                    ),
-                    value = Value(
-                        content = HtmlContent(pp.hodService)
-                    )
+                    key = Key(content = messages("directDebitPaymentSummary.activePayment.summary.paymentFor")),
+                    value = Value(content = HtmlContent(pp.hodService))
                 ),
                 SummaryListRow(
-                    key = Key(
-                        content = messages("directDebitPaymentSummary.activePayment.summary.date")
-                    ),
-                    value = Value(
-                        content = HtmlContent(pp.submissionDateTime.format(DateTimeFormatter.ofPattern("d MMM yyyy")))
-                    )
+                    key = Key(content = messages("directDebitPaymentSummary.activePayment.summary.date")),
+                    value = Value(content = HtmlContent(pp.submissionDateTime.format(DateTimeFormatter.ofPattern("d MMM yyyy"))))
                 ),
                 SummaryListRow(
-                    key = Key(
-                        content = messages("directDebitPaymentSummary.activePayment.summary.amount")
-                    ),
-                    value = Value(
-                        content = HtmlContent(formatAmount(pp.scheduledPaymentAmount))
-                    )
+                    key = Key(content = messages("directDebitPaymentSummary.activePayment.summary.amount")),
+                    value = Value(content = HtmlContent(formatAmount(pp.scheduledPaymentAmount)))
                 )
             )
         ))
