[DTR-149] add expansion text for MGD, SA & TC

--- a/app/views/PaymentPlanTypeView.scala.html
+++ b/app/views/PaymentPlanTypeView.scala.html
@@ -15,13 +15,18 @@
  *@
 
 @import models.DirectDebitSource.*
+@import views.html.components.*
 
 @this(
     layout: templates.Layout,
     formHelper: FormWithCSRF,
+    paragraph: Paragraph,
     govukErrorSummary: GovukErrorSummary,
+    govukDetails: GovukDetails,
     govukRadios: GovukRadios,
-    govukButton: GovukButton
+    h1: Header1,
+    govukButton: GovukButton,
+    bulletList: BulletList
 )
 
 @(form: Form[_], mode: Mode, selectedAnswer: Option[DirectDebitSource], call: Call)(implicit request: Request[_], messages: Messages)
@@ -31,14 +36,119 @@
     @formHelper(action = routes.PaymentPlanTypeController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
         @if(form.errors.nonEmpty) {
-            @govukErrorSummary(ErrorSummaryViewModel(form,  errorLinkOverrides = Map("value" -> "value_0")))
+            @govukErrorSummary(ErrorSummaryViewModel(form, errorLinkOverrides = Map("value" -> "value_0")))
+        }
+
+        @h1("paymentPlanType.heading", id = Some("govuk-margin-15"))
+
+        @if(selectedAnswer.contains(MGD)) {
+            @defining(HtmlFormat.fill(Seq(
+                paragraph("paymentPlan.collapsable.mgd"),
+                paragraph("paymentPlan.collapsable.mgd.p1"),
+                paragraph("paymentPlan.collapsable.mgd.single"),
+                paragraph("paymentPlan.collapsable.mgd.p2"),
+                paragraph("paymentPlan.collapsable.mgd.variable"),
+                paragraph("paymentPlan.collapsable.mgd.p3"),
+                paragraph("paymentPlan.collapsable.mgd.p4"),
+                bulletList(
+                    items = Seq(
+                        "paymentPlan.collapsable.mgd.b1",
+                        "paymentPlan.collapsable.mgd.b2",
+                        "paymentPlan.collapsable.mgd.b3",
+                        "paymentPlan.collapsable.mgd.b4"
+                    )
+                ),
+                paragraph("paymentPlan.collapsable.mgd.p5"),
+                paragraph("paymentPlan.collapsable.mgd.p6"),
+
+            ))) { mgdContent =>
+
+                @govukDetails(
+                    Details(
+                        summary = messages("paymentPlan.collapsable"),
+                        content = HtmlContent(mgdContent)
+                    )
+                )
+            }
+        }
+
+        @if(selectedAnswer.contains(SA)) {
+            @defining(HtmlFormat.fill(Seq(
+                paragraph("paymentPlan.collapsable.sa"),
+                paragraph("paymentPlan.collapsable.sa.p1"),
+                paragraph("paymentPlan.collapsable.sa.single"),
+                paragraph("paymentPlan.collapsable.sa.p2"),
+                paragraph("paymentPlan.collapsable.sa.budget"),
+                paragraph("paymentPlan.collapsable.sa.p3"),
+                paragraph("paymentPlan.collapsable.sa.p4"),
+                bulletList(
+                    items = Seq(
+                        "paymentPlan.collapsable.sa.b1",
+                        "paymentPlan.collapsable.sa.b2",
+                        "paymentPlan.collapsable.sa.b3",
+                        "paymentPlan.collapsable.sa.b4"
+                    )
+                ),
+                paragraph("paymentPlan.collapsable.sa.p5"),
+                paragraph("paymentPlan.collapsable.sa.p6"),
+
+            ))) { mgdContent =>
+
+                @govukDetails(
+                    Details(
+                        summary = messages("paymentPlan.collapsable"),
+                        content = HtmlContent(mgdContent)
+                    )
+                )
+            }
+        }
+
+        @if(selectedAnswer.contains(TC)) {
+            @defining(HtmlFormat.fill(Seq(
+                paragraph("paymentPlan.collapsable.tc"),
+                paragraph("paymentPlan.collapsable.tc.p1"),
+                paragraph("paymentPlan.collapsable.tc.single"),
+                paragraph("paymentPlan.collapsable.tc.p2"),
+                paragraph("paymentPlan.collapsable.variable"),
+                paragraph("paymentPlan.collapsable.tc.p3"),
+                paragraph("paymentPlan.collapsable.tc.p4"),
+                bulletList(
+                    items = Seq(
+                        "paymentPlan.collapsable.tc.b1",
+                        "paymentPlan.collapsable.tc.b2",
+                    )
+                ),
+                paragraph("paymentPlan.collapsable.tc.p5"),
+                bulletList(
+                    items = Seq(
+                        "paymentPlan.collapsable.tc.b3",
+                        "paymentPlan.collapsable.tc.b4"
+                    )
+                ),
+                paragraph("paymentPlan.collapsable.tc.p6"),
+
+            ))) { mgdContent =>
+
+                @govukDetails(
+                    Details(
+                        summary = messages("paymentPlan.collapsable"),
+                        content = HtmlContent(mgdContent)
+                    )
+                )
+            }
         }
 
         @govukRadios(
             RadiosViewModel(
-                field  = form("value"),
-                legend = LegendViewModel(messages("paymentPlanType.heading")).asPageHeading(),
-                items  = if (selectedAnswer == Some(MGD)) { PaymentPlanType.options1 } else if (selectedAnswer == Some(SA)) { PaymentPlanType.options2 } else { PaymentPlanType.options3 }
+                field = form("value"),
+                legend = LegendViewModel(messages("")).asPageHeading(),
+                items = if(selectedAnswer.contains(MGD)) {
+                    PaymentPlanType.options1
+                } else if(selectedAnswer.contains(SA)) {
+                    PaymentPlanType.options2
+                } else {
+                    PaymentPlanType.options3
+                }
             )
         )
 
@@ -47,3 +157,4 @@
         )
     }
 }
+
