[DTR-379] - Add new logic to check for amendment changes with unit tests

--- a/app/views/AmendPlanEndDateView.scala.html
+++ b/app/views/AmendPlanEndDateView.scala.html
@@ -40,7 +40,7 @@
                 HintViewModel(
                     HtmlContent(
                         Seq(
-                            s"<p >${messages("amendPlanEndDate.p1")}</p>",
+                            s"<p class='govuk-!-margin-top-7 govuk-hint-black'>${messages("amendPlanEndDate.p1")}</p>",
                             s"<p class='govuk-!-margin-top-7'>${messages("amendPlanEndDate.hint")}</p>",
                         ).mkString
                     )
