[DTR-149] - add and updated content

--- a/app/views/PaymentPlanTypeView.scala.html
+++ b/app/views/PaymentPlanTypeView.scala.html
@@ -49,17 +49,12 @@
                 paragraph("paymentPlan.collapsable.mgd.p2"),
                 paragraph("paymentPlan.collapsable.mgd.variable"),
                 paragraph("paymentPlan.collapsable.mgd.p3"),
-                paragraph("paymentPlan.collapsable.mgd.p4"),
                 bulletList(
                     items = Seq(
                         "paymentPlan.collapsable.mgd.b1",
-                        "paymentPlan.collapsable.mgd.b2",
-                        "paymentPlan.collapsable.mgd.b3",
-                        "paymentPlan.collapsable.mgd.b4"
+                        "paymentPlan.collapsable.mgd.b2"
                     )
                 ),
-                paragraph("paymentPlan.collapsable.mgd.p5"),
-                paragraph("paymentPlan.collapsable.mgd.p6"),
 
             ))) { mgdContent =>
 
@@ -109,7 +104,7 @@
                 paragraph("paymentPlan.collapsable.tc.p1"),
                 paragraph("paymentPlan.collapsable.tc.single"),
                 paragraph("paymentPlan.collapsable.tc.p2"),
-                paragraph("paymentPlan.collapsable.variable"),
+                paragraph("paymentPlan.collapsable.credit"),
                 paragraph("paymentPlan.collapsable.tc.p3"),
                 paragraph("paymentPlan.collapsable.tc.p4"),
                 bulletList(
