--- a/app/views/DirectDebitSummaryView.scala.html
+++ b/app/views/DirectDebitSummaryView.scala.html
@@ -77,7 +77,7 @@
             rows = Seq(
                 SummaryListRow(
                     key = Key(content = messages("directDebitPaymentSummary.activePayment.summary.planType")),
-                    value = Value(content = HtmlContent(pp.planType))
+                    value = Value(content = HtmlContent(messages(s"directDebitPaymentSummary.activePayment.summary.planType.${pp.planType}")))
                 ),
                 SummaryListRow(
                     key = Key(content = messages("directDebitPaymentSummary.activePayment.summary.paymentFor")),
