DTR-195: Screen AP3: Amend payment plan update page (#114)
* DTR-193: setting up basic page intitially

* DTR-193: Adding test cases and routes to Journey recovery for now

* DTR-193: Tidying up and some refractoring the code

* DTR-246: Initial Page developmment

* DTR-193: basic changes and tidy up

* DTR-193: Changing the hint text

* DTR-246: adding test cases, page title and url.

* DTR-247: Scaffolding of new pages

* DTR-193: URL changes

* DTR-247: Page ready and navigations

* DTR-247: Test cases and minor changes

* DTR-194 scaffolds with view data

* DTR-194: mock view page added

* DTR-247 update error message

* DTR-195: creating the base pages

* DTR-323: scaffolds

* merge from main, update endpoint

* DTR-323: page design updated

* DTR-195: view and controller values added

* DTR-323: routing and backlinks added

* DTR-195: completing the view

* DTR-323: dummy data added for the service

* DTR-323: tidy up

* fix the navigations, update tests

* DTR-195: navigation from ap3 to dd1

* DTR-195: test case added

* DTR-323: refactoring for f16 f17

* DTR-323: refactoring for f15 f16 logic integrated

* DTR-323 updated

* DTR-323: mock data added for cache

* update end to end navigation with F17 check

* DTR-323: cache issue fixed

* DTR-323: cache issue fixed

* DTR-323: unit tests updated

* DTR-323: tidy up

* DTR-247 merge conflicts fixed

* DTR-247: routing corrected

* DTR-195: test case changes

* DTR-323: cancel button issue fixed

* code refactor

* DTR-323: unit tests updated

* refactor code, added testes

* DTR-247: merge conflicts resolved

* DTR-247: budget type action issue fixed

* DTR-247: logs added for f15 f16

* DTR-247: unit tests added for payment plan details controller

* DTR-247: payment plan response updated

* DTR-247: tidy up

* DTR-247: cache values corrected

* DTR-194 initial changes

* merge with main and resolve conflicts

* DTR-194 b rename controller and view

* DTR-194: controller test added

* rename amend files for

--- a/app/views/AmendPlanStartDateView.scala.html
+++ b/app/views/AmendPlanStartDateView.scala.html
@@ -21,10 +21,10 @@
     formHelper: FormWithCSRF,
     mainErrorSummary: components.MainErrorSummary,
     govukDateInput: GovukDateInput,
+    govukWarningText: GovukWarningText,
     govukButton: GovukButton,
     h1: Header1,
-    p: Paragraph,
-    govukWarningText: GovukWarningText
+    p: Paragraph
 )
 
 @(form: Form[_], mode: Mode, call: Call)(implicit request: Request[_], messages: Messages)
