--- a/app/views/PaymentPlanDetailsView.scala.html
+++ b/app/views/PaymentPlanDetailsView.scala.html
@@ -29,18 +29,13 @@
         govukSummaryList: GovukSummaryList
 )
 
-@(paymentReference: String, paymentPlanDetails: PaymentPlanDetails, showActions: Boolean, showCancelAction: Boolean)(implicit request: Request[_], messages: Messages)
+@(planType: String, paymentReference: String, showActions: Boolean, rows: Seq[SummaryListRow])(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = titleNoForm(messages("paymentPlanDetails.title")), backLink = Some(routes.DirectDebitSummaryController.onPageLoad().url)) {
-
     @header1("paymentPlanDetails.heading")
-
     @paragraph("paymentPlanDetails.p1")
-
     @paragraph("paymentPlanDetails.p2")
-
     <p class="govuk-inset-text">@messages("paymentPlanDetails.inset.text")</p>
-
     @header2("paymentPlanDetails.heading")
 
     @govukSummaryList(SummaryList(
@@ -49,53 +44,26 @@
             content = messages("paymentPlanDetails.details.paymentReference", paymentReference)
         )),
         actions =
-            if (showActions || showCancelAction) {
                 Some(Actions(
                     items = Seq(
-                        if (showActions) ActionItem(
+                        if (showActions && (planType == PaymentPlanType.SinglePaymentPlan.toString || planType == PaymentPlanType.BudgetPaymentPlan.toString)) ActionItem(
                             href = routes.AmendPaymentAmountController.onPageLoad(NormalMode).url,
                             content = messages("paymentPlanDetails.details.amend"),
-                            visuallyHiddenText = Some(messages("1000000"))
+                            visuallyHiddenText = Some(messages("Amend"))
                         ) else null,
-                        if (showActions || showCancelAction) ActionItem(
+                        if (showActions && planType != PaymentPlanType.TaxCreditRepaymentPlan.toString) ActionItem(
                             href = "#",
                             content = messages("paymentPlanDetails.details.cancel"),
-                            visuallyHiddenText = Some(messages("1000000"))
+                            visuallyHiddenText = Some(messages("Cancel"))
                         ) else null,
-                        if (showActions) ActionItem(
+                        if (showActions && planType == PaymentPlanType.BudgetPaymentPlan.toString) ActionItem(
                             href = "#",
                             content = messages("paymentPlanDetails.details.suspend"),
-                            visuallyHiddenText = Some(messages("1000000"))
+                            visuallyHiddenText = Some(messages("Suspend"))
                         ) else null
                     ).filter(_ != null) // remove the nulls
                 ))
-            } else None
         )),
-        rows = Seq(
-            SummaryListRow(
-                key = Key(content = messages("paymentPlanDetails.details.planType")),
-                value = Value(content = HtmlContent(paymentPlanDetails.planType))
-            ),
-            SummaryListRow(
-                key = Key(content = messages("paymentPlanDetails.details.paymentFor")),
-                value = Value(content = HtmlContent(paymentPlanDetails.hodService))
-            ),
-            SummaryListRow(
-                key = Key(content = messages("paymentPlanDetails.details.dateSetUp")),
-                value = Value(content = HtmlContent(paymentPlanDetails.submissionDateTime.format(DateTimeFormatter.ofPattern("d MMM yyyy"))))
-            ),
-            SummaryListRow(
-                key = Key(content = messages("paymentPlanDetails.details.regularPaymentAmount")),
-                value = Value(content = HtmlContent(formatAmount(paymentPlanDetails.scheduledPaymentAmount)))
-            ),
-            SummaryListRow(
-                key = Key(content = messages("paymentPlanDetails.details.planStartDate")),
-                value = Value(content = HtmlContent(paymentPlanDetails.scheduledPaymentStartDate.format(DateTimeFormatter.ofPattern("d MMM yyyy"))))
-            ),
-            SummaryListRow(
-                key = Key(content = messages("paymentPlanDetails.details.planEndDate")),
-                value = Value(content = HtmlContent(paymentPlanDetails.scheduledPaymentEndDate.format(DateTimeFormatter.ofPattern("d MMM yyyy"))))
-            )
-        )
+        rows = rows
     ))
 }
