--- a/app/views/AmendPaymentPlanUpdateView.scala.html
+++ b/app/views/AmendPaymentPlanUpdateView.scala.html
@@ -28,7 +28,7 @@
         govukInsetText: GovukInsetText
 )
 
-@(paymentRef: String, regularPaymentAmount: String, startDate: String, endDate: String)(implicit request: Request[_], messages: Messages)
+@(paymentPlanReference: String, regularPaymentAmount: String, startDate: String, endDate: String)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = titleNoForm(messages("amendPaymentPlanUpdate.title")), showBackLink = false) {
 
@@ -36,7 +36,7 @@
         title = messages("amendPaymentPlanUpdate.panel.title"),
         body = Html(
                     s"${messages("amendPaymentPlanUpdate.panel.body1")}" +
-                    s"${messages("amendPaymentPlanUpdate.panel.strong",paymentRef)}" +
+                    s"${messages("amendPaymentPlanUpdate.panel.strong",paymentPlanReference)}" +
                     s"${messages("amendPaymentPlanUpdate.panel.body2")}"
                 ),
         classes = "govuk-!-margin-bottom-2"
@@ -66,7 +66,7 @@
         rows = Seq(
             SummaryListRow(
                 key = Key(Text(messages("amendPaymentPlanUpdate.reference"))),
-                value = Value(Text(paymentRef))
+                value = Value(Text(paymentPlanReference))
             ),
             SummaryListRow(
                 key = Key(Text(messages("amendPaymentPlanUpdate.amount"))),
