--- a/app/views/AmendPaymentPlanUpdateView.scala.html
+++ b/app/views/AmendPaymentPlanUpdateView.scala.html
@@ -28,7 +28,7 @@
         govukInsetText: GovukInsetText
 )
 
-@(paymentPlanReference: String, regularPaymentAmount: String, startDate: String, endDate: String)(implicit request: Request[_], messages: Messages)
+@(paymentPlanReference: String, regularPaymentAmount: String, startDate: String, endDate: String, rows: Seq[SummaryListRow])(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = titleNoForm(messages("amendPaymentPlanUpdate.title")), showBackLink = false) {
 
@@ -63,24 +63,7 @@
     @header2("amendPaymentPlanUpdate.h2")
 
     @govukSummaryList(SummaryList(
-        rows = Seq(
-            SummaryListRow(
-                key = Key(Text(messages("amendPaymentPlanUpdate.reference"))),
-                value = Value(Text(paymentPlanReference))
-            ),
-            SummaryListRow(
-                key = Key(Text(messages("amendPaymentPlanUpdate.amount"))),
-                value = Value(Text(regularPaymentAmount))
-            ),
-            SummaryListRow(
-                key = Key(Text(messages("amendPaymentPlanUpdate.startDate"))),
-                value = Value(Text(startDate))
-            ),
-            SummaryListRow(
-                key = Key(Text(messages("amendPaymentPlanUpdate.endDate"))),
-                value = Value(Text(endDate))
-            )
-        )
+        rows = rows
     ))
 
     @govukDetails(
